# anomalysuite

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
anomalysuite/: anomaly_suite.py
anomalysuite/config/: logging_config.py
anomalysuite/data/: random_data.py
anomalysuite/notebook/: 20250527_tranad_with_randomdata.ipynb  20250611_tranad_with_randomdata.ipynb
anomalysuite/processor/: torch_processor.py
anomalysuite/reconstructor/: __init__.py  tranad.py
anomalysuite/scorer/: normal_scorer.py
tests/: conftest.py  strategies.py  test_reconstructor.py  test_scorer.py  test_setup.py
