[project]
name = "anomalysuite"
version = "0.1.0"
description = "All-in-One anomaly detection models including reconstructor, scorer and classifier."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Taeyong Jeon", email = "taeyongjeon24@gmail.com" }]
license-files = ["LICENSE"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
]
dependencies = [
  "einops>=0.8.1",
  "ipykernel>=6.29.5",
  "lightning>=2.5.1",
  "matplotlib>=3.10.3",
  "pandas>=2.2.3",
  "scipy>=1.15.3",
  "structlog>=25.4.0",
  "torch>=2.6.0",
  "torchsqlite>=0.1.1",
  "wandb>=0.19.9",
]

[project.urls]
repository = "https://github.com/tyjeon24/anomalysuite"

[dependency-groups]
dev = [
  "hypothesis>=6.135.9",
  "mypy>=1.15.0",
  "pandas-stubs>=2.2.3.250527",
  "pre-commit>=4.2.0",
  "pytest>=8.3.5",
  "pytest-cov>=6.1.1",
  "ruff>=0.11.5",
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu118" }]

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
addopts = "--maxfail=1"
log_cli = true
log_cli_level = "DEBUG"
